src/test/ui/regions/regions-assoc-type-static-bound-in-trait-not-met.stderr
error[E0477]: the type `&'a i32` does not fulfill the required lifetime
  --> $DIR/regions-assoc-type-static-bound-in-trait-not-met.rs:10:5
   |
LL |     type Value = &'a i32;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: type must satisfy the static lifetime

error: aborting due to previous error

For more information about this error, try `rustc --explain E0477`.
